--- a/src/scss/blocks/header.scss
+++ b/src/scss/blocks/header.scss
@@ -33,6 +33,7 @@
   position: relative;
   display: inline-block;
   margin-bottom: 20px;
+  padding-bottom: 5px;
   font-size: 90px;
   font-family: "Lobster", cursive;
   font-weight: 400;
@@ -44,19 +45,17 @@
     position: absolute;
     content: "";
     clear: both;
-    background-color: #fbdc4d;
+    background-color: rgb(251, 220, 77);
     width: 100%;
     height: 15px;
-    bottom: 8px;
+    bottom: 0px;
     left: 0;
     z-index: -1;
     transition: 0.5s ease-in-out;
   }
 
   @media (min-width: 1170px) {
-    font-family: "Open Sans", sans-serif;
-    font-weight: bold;
-    text-decoration: none;
+    // text-decoration: none;
   }
 }
 
@@ -96,7 +95,7 @@
   border-radius: 50%;
   z-index: 5;
   padding: 10px;
-  background-color: #fbdc4d;
+  background-color: rgb(251, 220, 77);
   margin: 0 auto;
 
   img {
@@ -116,9 +115,12 @@
   transition: 0.5s linear;
 
   &:hover {
-    color: #fbdc4d;
-    text-shadow: 1px 1px 2px #000000;
     transform: translateY(-15px);
+
+    .avatar__title  {
+      color: #fbdc4d;
+      text-shadow: 1px 1px 2px #000000;
+    }
   }
 }
 
@@ -132,9 +134,12 @@
   transition: 0.5s linear;
 
   &:hover {
+    transform: translate(-100%, -15px);
+    
+  .avatar__title  {
     color: #fbdc4d;
     text-shadow: 1px 1px 2px #000000;
-    transform: translate(-100%, -15px);
+  }
   }
 }
 
@@ -148,19 +153,24 @@
   transition: 0.5s linear;
 
   &:hover {
-    color: #fbdc4d;
-    text-shadow: 1px 1px 2px #000000;
     transform: translate(-50%, -15px);
+
+    .avatar__title  {
+      color: #fbdc4d;
+      text-shadow: 1px 1px 2px #000000;
+    }
   }
 }
 
 .avatar__title {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   text-align: center;
+  color: #000;
   font-size: 26px;
   font-weight: 700;
   line-height: 1;
   letter-spacing: 1px;
+  transition: 0.5s linear;
 }
 
 .avatar-html__img {
