--- a/src/scss/blocks/navigation.scss
+++ b/src/scss/blocks/navigation.scss
@@ -48,22 +48,22 @@
   font-size: 82px;
   font-weight: 400;
   font-family: "Lobster", cursive;
-  color: rgb(0, 0, 0);
+  background-image: -webkit-gradient( linear, left top, right top, color-stop(0, #2bb0af), color-stop(0.4, #ff5549cd), color-stop(.8, #e0bc8d));
+  background-image: gradient( linear, color-stop(0, #2bb0af), color-stop(0.4, #ff5549cd), color-stop(.8, #e0bc8d));
+  color:transparent;
+  -webkit-background-clip: text;
+  background-clip: text;
   text-decoration: none;
   transition: 0.8s ease-in-out;
   z-index: 5;
   margin-bottom: 50px;
 
   &:hover {
-    color: #ea736d;
-    text-shadow: 0px 1px 1px black;
-
+      transition: 0.8s ease-in-out;
+      background-image: -webkit-gradient( linear, left top, right top, color-stop(0, #26e2e2), color-stop(0.4, #f52516cd), color-stop(.8, #eca03d));
+      background-image: gradient( linear, color-stop(0, #2bb0af), color-stop(0.4, #ff5549cd), color-stop(.8, #e0bc8d));
     &::after {
-      background-color: #039be5;
       transform: rotatex(180deg);
-      left: -6px;
-      bottom: 0px;
-      transition: 1s;
     }
   }
 
@@ -71,13 +71,12 @@
     position: absolute;
     content: "";
     clear: both;
-    background-color: rgb(251, 220, 77);
-    width: 120px;
+    background-color: $yellowcolor;
+    width: 100%;
     height: 10px;
-    bottom: -4px;
+    bottom: -6px;
     left: 0;
     z-index: -1;
-    transform: translate(-6px, -4px);
     transition: 0.5s ease-in-out;
 
     @media (min-width: 1170px) {
@@ -89,7 +88,7 @@
     font-weight: 700;
     font-family: "Open Sans", sans-serif;
     margin-bottom: 0px;
-    font-size: 42px;
+    font-size: 52px;
   }
 }
 
@@ -98,7 +97,11 @@
   position: relative;
   font-size: 20px;
   font-family: "Open Sans", sans-serif;
-  color: rgb(0, 0, 0);
+  background-image: -webkit-gradient( linear, left top, right top, color-stop(0, #000), color-stop(0.4, #000));
+  background-image: gradient( linear, color-stop(0, #000), color-stop(0.4, #000));
+  color:transparent;
+  -webkit-background-clip: text;
+  background-clip: text;
   font-weight: bold;
   text-decoration: none;
   transition: border 0.5s ease-in-out;
@@ -115,7 +118,11 @@
     max-width: 0;
     border-bottom: 7px solid #fbdc4d;
     transition: 0.5s linear;
-    color: #ea736d;
+    background-image: -webkit-gradient( linear, left top, right top, color-stop(0, #2bb0af), color-stop(0.4, #ff5549cd), color-stop(.8, #e0bc8d));
+    background-image: gradient( linear, color-stop(0, #2bb0af), color-stop(0.4, #ff5549cd), color-stop(.8, #e0bc8d));
+    color:transparent !important;
+    -webkit-background-clip: text;
+    background-clip: text;
   }
 
   &:hover:after {
@@ -127,7 +134,11 @@
   }
 
   &--active {
-    color: #ea736d;
+    background-image: -webkit-gradient( linear, left top, right top, color-stop(0, #2bb0af), color-stop(0.4, #ff5549cd), color-stop(.8, #e0bc8d)) !important;
+    background-image: gradient( linear, color-stop(0, #2bb0af), color-stop(0.4, #ff5549cd), color-stop(.8, #e0bc8d)) !important;
+    color:transparent !important;
+    -webkit-background-clip: text;
+    background-clip: text;
     border-bottom: 7px solid #fbdc4d;
 
     &:after {
@@ -179,11 +190,15 @@
 
   a {
     position: relative;
-    margin-right: 20px;
+    margin-right: 30px;
     color: black;
     transition: 0.5s ease-in-out;
     z-index: 5;
 
+    @media (min-width: 1170px) {
+      margin-right: 20px;
+    }
+  
     &:last-child {
       margin-right: 0;
     }
