--- a/src/scss/blocks/ui.scss
+++ b/src/scss/blocks/ui.scss
@@ -1,3 +1,5 @@
+
+
 .button-01 {
   display: inline-block;
   padding: 20px 40px;
@@ -6,7 +8,7 @@
   border: 4px solid rgb(251, 220, 77);
   font-size: 34px;
   font-family: "Open Sans", sans-serif;
-  color: rgb(0, 0, 0);
+  color: #000;
   font-weight: bold;
   text-decoration: none;
   transition: 0.3s ease-in;
