добвавил новый проект

--- a/src/pug/portfolio/LiziLizkaLab.pug
+++ b/src/pug/portfolio/LiziLizkaLab.pug
@@ -27,4 +27,4 @@ section.card-post
                     .owl-carousel-item
                         img(src="./img/portfolio/lizilab/04.jpg", alt="01.jpg")
         .card-post__pagination
-            +pagination-card("realhome.html", "quantum.html")
+            +pagination-card("lookshop.html", "quantum.html")
