--- a/src/pug/portfolio/forest-travel.pug
+++ b/src/pug/portfolio/forest-travel.pug
@@ -30,4 +30,4 @@ section.card-post
                         img(src="./img/portfolio/forest-travel/05.jpg", alt="05.jpg")
 
         .card-post__pagination
-            +pagination-card("surfing.html", "muncak.html")
+            +pagination-card("comand-web.html", "travel-blog.html")
