--- a/src/pug/portfolio/realhome.pug
+++ b/src/pug/portfolio/realhome.pug
@@ -26,4 +26,4 @@ section.card-post
                         img(src="./img/portfolio/realhome/03.jpg", alt="01.jpg")
 
         .card-post__pagination
-            +pagination-card("travel-blog.html", "LiziLizkaLab.html")
+            +pagination-card("surfing.html", "muncak.html")
