--- a/src/pug/portfolio/surfing.pug
+++ b/src/pug/portfolio/surfing.pug
@@ -28,4 +28,4 @@ section.card-post
                         img(src="./img/portfolio/surfing/04.jpg", alt="04.jpg")
 
         .card-post__pagination
-            +pagination-card("amazing.html", "forest-travel.html")
+            +pagination-card("amazing.html", "realhome.html")
