--- a/src/pug/portfolio/travel-blog.pug
+++ b/src/pug/portfolio/travel-blog.pug
@@ -26,4 +26,4 @@ section.card-post
                         img(src="./img/portfolio/travel-blog/03.jpg", alt="01.jpg")
 
         .card-post__pagination
-            +pagination-card("comand-web.html", "realhome.html")
+            +pagination-card("forest-travel.html", "lookshop.html")
