--- a/src/pug/sections/portfolio.pug
+++ b/src/pug/sections/portfolio.pug
@@ -4,13 +4,13 @@ section(class='portfolio' id='portfolio')
             .portfolio__title Портфолио
             .portfolio__card
                     +card("travel-blog.html", "08.jpg", "08.jpg", "Верстка “Travel Blog”", "Верстка одностраничного сайта.")
-                    +card("realhome.html", "02.jpg", "02.jpg", "Верстка “RealHome”", "Верстка одностраничного сайта.")
+                    +card("lookshop.html", "14.jpg", "14.jpg", "Верстка “Lookshop”", "Верстка одностраничного сайта.")
                     +card("LiziLizkaLab.html", "04.jpg", "04.jpg", "Верстка “LiziLizka Lab”", "Верстка одностраничного сайта.")
                     +card("quantum.html", "03.jpg", "03.jpg", "Магазин “Quantum”", "Верстка одностраничного сайта.")
                     +card("dhl.html", "06.jpg", "06.jpg", "Верстка “DHL”", "Верстка одностраничного сайта.")
                     +card("amazing.html", "13.jpg", "13.jpg", "Верстка “Amazing”", "Верстка одностраничного сайта.")
                     +card("surfing.html", "09.jpg", "09.jpg", "Верстка “Surfing Website”", "Верстка одностраничного сайта.")
-                    +card("forest-travel.html", "10.jpg", "10.jpg", "Верстка “Forest Travel”", "Верстка многостраничного сайта.")
+                    +card("realhome.html", "02.jpg", "02.jpg", "Верстка “RealHome”", "Верстка одностраничного сайта.")
                     +card("muncak.html", "12.jpg", "12.jpg", "Верстка “Muncak”", "Верстка одностраничного сайта.")
         .portfolio__nav-bottom
             .portfolio__color-circle
