--- a/src/pug/portfolio/comand-web.pug
+++ b/src/pug/portfolio/comand-web.pug
@@ -27,4 +27,4 @@ section.card-post
                     .owl-carousel-item
                         img(src="./img/portfolio/digital-nomad/04.jpg", alt="01.jpg")
         .card-post__pagination
-            +pagination-card("unit.html", "travel-blog.html")
+            +pagination-card("unit.html", "forest-travel.html")
