--- a/src/pug/sections/portfolio-inner.pug
+++ b/src/pug/sections/portfolio-inner.pug
@@ -20,8 +20,8 @@ section.portfolio
                 .portfolio__card-inner
                     .project.pug.js
                         +card("travel-blog.html", "08.jpg", "08.jpg", "Верстка “Travel Blog”", "Верстка одностраничного сайта.")
-                    .project.pug.js
-                        +card("realhome.html", "02.jpg", "02.jpg", "Верстка “RealHome”", "Верстка одностраничного сайта.")
+                    .project.scss.js
+                        +card("lookshop.html", "14.jpg", "14.jpg", "Верстка “Lookshop”", "Верстка одностраничного сайта.")
                     .project.pug.js
                         +card("LiziLizkaLab.html", "04.jpg", "04.jpg", "Верстка “LiziLizka Lab”", "Верстка одностраничного сайта.")
                     .project.scss.js
@@ -30,16 +30,18 @@ section.portfolio
                         +card("dhl.html", "06.jpg", "06.jpg", "Верстка “DHL”", "Верстка одностраничного сайта.")
                     .project.scss.js
                         +card("amazing.html", "13.jpg", "13.jpg", "Верстка “Amazing”", "Верстка одностраничного сайта.")
-                    .project.pug.js
-                        +card("comand-web.html", "07.jpg", "07.jpg", "Верстка “Digital Nomad”", "Верстка многостраничного сайта.")
                     .project.less.js
                         +card("surfing.html", "09.jpg", "09.jpg", "Верстка “Surfing Website”", "Верстка одностраничного сайта.")
-                    .project.html
-                        +card("forest-travel.html", "10.jpg", "10.jpg", "Верстка “Forest Travel”", "Верстка многостраничного сайта.")
+                    .project.pug.js
+                        +card("realhome.html", "02.jpg", "02.jpg", "Верстка “RealHome”", "Верстка одностраничного сайта.")
                     .project.pug.js
                         +card("muncak.html", "12.jpg", "12.jpg", "Верстка “Muncak”", "Верстка одностраничного сайта.")
                     .project.less.js
                         +card("unit.html", "11.jpg", "11.jpg", "Верстка “Unit”", "Верстка одностраничного сайта.")
+                    .project.pug.js
+                        +card("comand-web.html", "07.jpg", "07.jpg", "Верстка “Digital Nomad”", "Верстка многостраничного сайта.")
+                    .project.html
+                        +card("forest-travel.html", "10.jpg", "10.jpg", "Верстка “Forest Travel”", "Верстка многостраничного сайта.")
 
 
 
