добавил новый функционал

--- a/src/pug/layouts/page-layout.pug
+++ b/src/pug/layouts/page-layout.pug
@@ -46,6 +46,8 @@ html(lang="ru")
 
         script(src="./js/contact.js")
 
+        script(src="./js/full-page.js")
+
         <script>jQuery(document).ready(function($) {new WOW().init();});</script>
         <script src="./js/wow.min.js"></script>
         <script>jQuery(document).ready(function($) {$('.wow').attr('data-wow-duration', '1.5s' );});</script>
