--- a/src/scss/blocks/contacts.scss
+++ b/src/scss/blocks/contacts.scss
@@ -41,7 +41,7 @@
     position: absolute;
     content: "";
     clear: both;
-    background-color: rgb(251, 220, 77);
+    background-color: #fbdc4d;
     width: 100%;
     height: 10px;
     bottom: 5px;
