--- a/src/pug/portfolio/lookshop.pug
+++ b/src/pug/portfolio/lookshop.pug
@@ -1,5 +1,5 @@
 section.card-post
-    .container
+    .container.card-post-wrap
         .card-post__nav
             h2.card-post__nav-desc Верстка интернет магазина
             h3.card-post__nav-title “LookShop”
@@ -25,3 +25,16 @@ section.card-post
                         img(src="./img/portfolio/lookshop/03.jpg", alt="03.jpg")
         .card-post__pagination
             +pagination-card("travel-blog.html", "LiziLizkaLab.html")
+    .full-page
+        .container.full-page-wrapper
+            .full-page-wrap
+                .full-page__desc
+                    .full-page__logo
+                        +logo("index.html")
+                    .full-page__title
+                        h2 Верстка интернет магазина 
+                            span “LookShop”
+                    .full-page__exit
+                .full-page__img
+                    img(src="./img/fullpage/lookshop.png", alt="")
+
