--- a/src/scss/blocks/card-post.scss
+++ b/src/scss/blocks/card-post.scss
@@ -1,4 +1,5 @@
 .card-post {
+  position: relative;
   padding: 30px 15px;
 }
 
@@ -120,6 +121,10 @@
   width: 700px;
 }
 
+.carousel-project .owl-carousel-item img {
+  cursor: pointer;
+}
+
 .carousel-project .owl-prev {
   position: absolute;
   top: 50%;
@@ -213,5 +218,90 @@
 
   @media (min-width: 1170px) {
     font-size: 22px;
+  }
+}
+
+.full-page {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000000a1;
+  z-index: 300;
+}
+
+.full-page--active {
+  display: block;
+}
+
+.full-page-wrapper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  padding: 50px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.full-page-wrap{
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+  padding: 10px;
+  background-color: #fbdc4d;
+}
+
+.full-page__desc {
+  padding: 20px 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: rgb(187, 187, 187);
+  border-bottom: 10px solid #fbdc4d;
+}
+
+.full-page__title h2 {
+  font-size: 28px;
+  font-family: "Open Sans", sans-serif;
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  text-decoration: none;
+
+  span {
+    color: #fbdc4d;
+  }
+}
+
+.full-page__exit {
+  position: relative;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+
+  &::before {
+    position: absolute;
+    content: '';
+    top: 50%;
+    left: 50%;
+    width: 50px;
+    height: 10px;
+    background-color: #fff;
+    border-radius: 5px;
+    transform: translate(-50%, -50%) rotate(45deg);
+  }
+
+  &::after {
+    position: absolute;
+    content: '';
+    top: 50%;
+    left: 50%;
+    width: 50px;
+    height: 10px;
+    background-color: #fff;
+    border-radius: 5px;
+    transform: translate(-50%, -50%) rotate(-45deg);
   }
 }
