--- a/src/pug/portfolio/lookshop.pug
+++ b/src/pug/portfolio/lookshop.pug
@@ -37,4 +37,6 @@ section.card-post
                     .full-page__exit
                 .full-page__img
                     img(src="./img/fullpage/lookshop.png", alt="")
+                .full-page__img
+                    img(src="./img/fullpage/lookshop-2.png", alt="")
 
