--- a/src/pug/sections/portfolio-inner.pug
+++ b/src/pug/sections/portfolio-inner.pug
@@ -21,7 +21,7 @@ section.portfolio
                     .project.pug.js
                         +card("travel-blog.html", "08.jpg", "08.jpg", "Верстка “Travel Blog”", "Верстка одностраничного сайта.")
                     .project.scss.js
-                        +card("lookshop.html", "14.jpg", "14.jpg", "Верстка “Lookshop”", "Верстка одностраничного сайта.")
+                        +card("lookshop.html", "14.jpg", "14.jpg", "Верстка “Lookshop”", "Верстка многостраничного сайта.")
                     .project.pug.js
                         +card("LiziLizkaLab.html", "04.jpg", "04.jpg", "Верстка “LiziLizka Lab”", "Верстка одностраничного сайта.")
                     .project.scss.js
