--- a/src/pug/portfolio/amazing.pug
+++ b/src/pug/portfolio/amazing.pug
@@ -1,5 +1,5 @@
 section.card-post
-    .container
+    .container.card-post-wrap
         .card-post__nav
             h2.card-post__nav-desc Верстка интернет магазина
             h3.card-post__nav-title “Amazing”
@@ -22,3 +22,15 @@ section.card-post
                         img(src="./img/portfolio/amazing/02.jpg", alt="01.jpg")
         .card-post__pagination
             +pagination-card("dhl.html", "surfing.html")
+    .full-page
+        .container.full-page-wrapper
+            .full-page-wrap
+                .full-page__desc
+                    .full-page__logo
+                        +logo("index.html")
+                    .full-page__title
+                        h2 Верстка интернет магазина 
+                            span “Amazing”
+                    .full-page__exit
+                .full-page__img
+                    img(src="./img/fullpage/amazing.png", alt="")
