--- a/src/pug/portfolio/surfing.pug
+++ b/src/pug/portfolio/surfing.pug
@@ -1,5 +1,5 @@
 section.card-post
-    .container
+    .container.card-post-wrap
         .card-post__nav
             h2.card-post__nav-desc Верстка интернет магазина
             h3.card-post__nav-title “Surfing website”
@@ -29,3 +29,15 @@ section.card-post
 
         .card-post__pagination
             +pagination-card("amazing.html", "realhome.html")
+    .full-page
+        .container.full-page-wrapper
+            .full-page-wrap
+                .full-page__desc
+                    .full-page__logo
+                        +logo("index.html")
+                    .full-page__title
+                        h2 Верстка интернет магазина 
+                            span “Surfing website”
+                    .full-page__exit
+                .full-page__img
+                    img(src="./img/fullpage/surfing.png", alt="")
