--- a/src/pug/portfolio/unit.pug
+++ b/src/pug/portfolio/unit.pug
@@ -1,5 +1,5 @@
 section.card-post
-    .container
+    .container.card-post-wrap
         .card-post__nav
             h2.card-post__nav-desc Верстка интернет магазина
             h3.card-post__nav-title “Unit”
@@ -25,3 +25,15 @@ section.card-post
 
         .card-post__pagination
             +pagination-card("muncak.html", "comand-web.html")
+    .full-page
+        .container.full-page-wrapper
+            .full-page-wrap
+                .full-page__desc
+                    .full-page__logo
+                        +logo("index.html")
+                    .full-page__title
+                        h2 Верстка интернет магазина 
+                            span “Unit”
+                    .full-page__exit
+                .full-page__img
+                    img(src="./img/fullpage/unit.png", alt="")
