--- a/src/pug/sections/portfolio.pug
+++ b/src/pug/sections/portfolio.pug
@@ -4,7 +4,7 @@ section(class='portfolio' id='portfolio')
             .portfolio__title Портфолио
             .portfolio__card
                     +card("travel-blog.html", "08.jpg", "08.jpg", "Верстка “Travel Blog”", "Верстка одностраничного сайта.")
-                    +card("lookshop.html", "14.jpg", "14.jpg", "Верстка “Lookshop”", "Верстка одностраничного сайта.")
+                    +card("lookshop.html", "14.jpg", "14.jpg", "Верстка “Lookshop”", "Верстка многостраничного сайта.")
                     +card("LiziLizkaLab.html", "04.jpg", "04.jpg", "Верстка “LiziLizka Lab”", "Верстка одностраничного сайта.")
                     +card("quantum.html", "03.jpg", "03.jpg", "Магазин “Quantum”", "Верстка одностраничного сайта.")
                     +card("dhl.html", "06.jpg", "06.jpg", "Верстка “DHL”", "Верстка одностраничного сайта.")
