--- a/src/pug/layouts/page-layout.pug
+++ b/src/pug/layouts/page-layout.pug
@@ -21,8 +21,19 @@ html(lang="ru")
         link(rel="stylesheet", href="./libs/css/owl.theme.default.min.css")
    
     body(class=pageClass)
-
-        block content
+        
+        .page
+            .page__background
+                .page__background-wrap
+                    img(src="./img/body/01.png" data-speed='-5' class='layer')
+                    img(src="./img/body/02.png" data-speed='5' class='layer')
+                    img(src="./img/body/03.png" data-speed='-2' class='layer')
+                    img(src="./img/body/04.png" data-speed='4' class='layer')
+                    img(src="./img/body/05.png" data-speed='6' class='layer')
+                .page__background-wrap-bg
+            .page__link#page-link
+                a(href="#navigation") Вверх
+            block content
 
         <!-- build:js1 js/jquery.js -->
         <script src="./js/jquery-3.3.1.min.js"></script>
@@ -47,6 +58,10 @@ html(lang="ru")
         script(src="./js/contact.js")
 
         script(src="./js/full-page.js")
+
+        script(src="./js/parallax.js")
+
+        script(src="./js/btnup.js")
 
         <script>jQuery(document).ready(function($) {new WOW().init();});</script>
         <script src="./js/wow.min.js"></script>
