--- a/src/pug/sections/header.pug
+++ b/src/pug/sections/header.pug
@@ -1,16 +1,16 @@
 section.header
 	.container
 		.header-wrap
-			.header__text
-				.header__text-title Александр
-				.header__text-title Воробьев
+			.header__text.wow.animated.fadeInUp
+				.header__text-title.neon <span>Ал</span>ексан<span>д</span>р
+				.header__text-title.neon Вор<span>обь</span>ев
 
 				.header__text-subtitle
 					p Верстальщик сайтов, Frontend-разработчик. Оперативная верстка. Работаю с соблюдением сроков и выполнением ТЗ. 
 				.header__text-button
 					+button-01("#scrolltarget", "Познакомиться")
 					+button-02("contact.html", "Контакты")
-			.header__avatar
+			.header__avatar.wow.animated.fadeInUp
 				.header__avatar_css
 					h4.avatar__title CSS
 					.avatar-css__img
@@ -22,7 +22,7 @@ section.header
 					.avatar-js__img
 				img(src="./img/header/master.jpg", alt="master.jpg")
 	.big-container
-		.header__bg-img
+		.header__bg-img.wow.animated.fadeInUp
 			.header__carousel
 				.header-owl-carousel.owl-carousel
 					.owl-carousel-item
@@ -31,10 +31,11 @@ section.header
 						img(src="./img/header/cert/html-pro.png", alt="")
 					.owl-carousel-item
 						img(src="./img/header/cert/js.png", alt="")
+			span
 	.container
 		.header__bg-wrap
-			.header__bg-item
-				.header__bg-title Что я умею:
+			.header__bg-item.wow.animated.fadeInUp
+				.header__bg-title.neon Чт<span>о</span> я ум<span>е</span>ю:
 				.header__bg-skills
 					ul
 						li — Html/Pug, Css/Scss/Less, Javascript/Typescript
@@ -44,8 +45,8 @@ section.header
 						li — с Bootstrap и без него.
 				.header__bg-button
 					+button-01("portfolio.html", "Смотреть работы")
-			.header__bg-item
-				.header__bg-title На связи:
+			.header__bg-item.wow.animated.fadeInUp
+				.header__bg-title.neon На св<span>язи</span>:
 				.header__bg-social
 					a(href="https://vk.com/id65683827", target="_blank", class="social-vk")
 						i(class="fa fa-vk fa-2x", aria-hidden="true")
