--- a/src/scss/blocks/animation.scss
+++ b/src/scss/blocks/animation.scss
@@ -68,3 +68,64 @@
 }
 }
 
+@keyframes neon {
+  78% {
+      color: inherit;
+      text-shadow: inherit;
+  }
+  79%{
+      color: #0b3960;
+  }
+  80% {
+      text-shadow: none;
+  }
+  81% {
+      color: inherit;
+      text-shadow: inherit;
+  }
+  82% {
+      color: #0b3960;
+      text-shadow: none;
+  }
+  83% {
+      color: inherit;
+      text-shadow: inherit;
+  }
+  92% {
+      color: #0b3960;
+      text-shadow: none;
+  }
+  93% {
+      color: inherit;
+      text-shadow: inherit;
+  }
+}
+
+@keyframes rocket {
+  0% {
+    transform: rotate(-90deg) translate(0px);
+  }
+  25% {
+    transform: rotate(-90deg) translate(15px);
+  }
+
+  50% {
+    transform: rotate(-90deg) translate(0px);
+  }
+  75% {
+    transform: rotate(-90deg) translate(-15px);
+  }
+  100% {
+    transform: rotate(-90deg) translate(0px);
+  }
+}
+
+@keyframes bg {
+  0% {
+    transform: scale(1);
+  }
+
+  100% {
+    transform: scale(1.1);
+  }
+}
