--- a/src/scss/blocks/contacts.scss
+++ b/src/scss/blocks/contacts.scss
@@ -1,9 +1,9 @@
 .contact {
   position: relative;
   padding: 120px 30px;
-  // background-color: #f4f8f9;
   background: linear-gradient(#f4f8f980, #f4f8f998),
     url("../img/contact/01.jpg") top left / cover no-repeat;
+    background-blend-mode: hue;
 
   @media (min-width: 1170px) {
     padding: 120px 15px;
@@ -32,8 +32,8 @@
   display: inline-block;
   margin-bottom: 70px;
   font-size: 72px;
-  font-family: "Open Sans", sans-serif;
-  color: rgb(0, 0, 0);
+  font-family: 'Neoneon';
+  color: rgb(255, 255, 255);
   font-weight: bold;
   z-index: 5;
 
@@ -41,11 +41,11 @@
     position: absolute;
     content: "";
     clear: both;
-    background-color: #fbdc4d;
+    background-color: #fd6dfd;
     width: 100%;
     height: 10px;
-    bottom: 5px;
-    left: 0;
+    bottom: -7px;
+    left: -3px;
     z-index: -1;
     transition: 0.5s ease-in-out;
   }
@@ -66,7 +66,7 @@
 
 .contact__info {
   position: relative;
-  z-index: 3;
+  z-index: 10;
   max-width: 800px;
   margin: auto;
 
@@ -79,9 +79,10 @@
 .contact__info-desc {
   font-size: 30px;
   font-family: "Open Sans", sans-serif;
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
   line-height: 1.4;
   text-align: left;
+  text-shadow: 0 0 5px rgb(26, 26, 26);
 
   @media (min-width: 1170px) {
     font-size: 20px;
@@ -134,7 +135,7 @@
   left: -1.3em;
   top: 50%;
   margin-top: -1.3em;
-  background: rgb(251, 220, 77);
+  background: #fd6dfd;
   height: 2em;
   width: 2em;
   line-height: 2em;
@@ -162,7 +163,7 @@
   font-family: "Open Sans", sans-serif;
   font-weight: bold;
   line-height: 1.2;
-  color: rgb(150, 150, 157);
+  color: rgb(0, 0, 0);
 
   @media (min-width: 1170px) {
     font-size: 20px;
@@ -204,7 +205,7 @@
   margin: 20px;
   padding: 60px;
   background-color: rgb(255, 255, 255);
-  box-shadow: 0px 28px 100px 0px rgb(194, 219, 235);
+  box-shadow: 0px 28px 100px 0px #fd6dfd;
   border-radius: 10px;
   margin-left: auto;
   margin-right: auto;
@@ -233,6 +234,10 @@
   @media (min-width: 1170px) {
     font-size: 20px;
   }
+
+  &::placeholder {
+    color: #000;
+  }
 }
 
 .form-textarea-text {
@@ -251,6 +256,10 @@
   &:hover,
   &:focus {
     border-bottom: 1px solid rgb(251, 220, 77);
+  }
+
+  &::placeholder {
+    color: #000;
   }
 
   @media (min-width: 1170px) {
