--- a/src/scss/blocks/footer.scss
+++ b/src/scss/blocks/footer.scss
@@ -1,6 +1,35 @@
 .footer {
+  position: relative;
   padding: 30px 15px 40px;
-  background-color: #333333;
+  background-color: rgba(51, 51, 51, .5);
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 50px;
+    width: 100%;
+    background: linear-gradient(
+      0deg,
+      rgba(255, 255, 255, 0) 30%,
+      rgba(253, 109, 253, 1) 100%
+    );
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 50px;
+    width: 100%;
+    background: linear-gradient(
+      180deg,
+      rgba(255, 255, 255, 0) 30%,
+      rgb(0, 0, 0) 100%
+    );
+  }
 }
 
 .footer__title {
@@ -20,7 +49,7 @@
 .footer__subtitle {
   font-size: 26px;
   font-family: "Roboto", sans-serif;
-  color: #b0b0b0;
+  color: #ffffff;
   line-height: 1.2;
   text-align: center;
 
@@ -31,14 +60,42 @@
 }
 
 .footer-inner {
-  padding-top: 70px;
-  height: 725px;
-  background-image: url("../img/footer/bg-footer.png");
-  background-repeat: no-repeat;
-  background-position: bottom;
+  position: relative;
+  height: 600px;
+  background: url("../img/footer/bg-footer.png") top center no-repeat;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 150px;
+    width: 100%;
+    background: linear-gradient(
+      0deg,
+      rgba(255, 255, 255, 0) 30%,
+      rgba(253, 109, 253, 1) 100%
+    );
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 150px;
+    width: 100%;
+    background: linear-gradient(
+      180deg,
+      rgba(255, 255, 255, 0) 30%,
+      rgb(0, 0, 0) 100%
+    );
+  }
 }
 
 .footer-inner-column {
+  height: 600px;
+  margin: auto 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -49,7 +106,7 @@
   margin-bottom: 40px;
   font-size: 34px;
   font-family: "Roboto", sans-serif;
-  color: rgb(22, 22, 22);
+  color: rgb(255, 255, 255);
   font-weight: bold;
 }
 
@@ -59,7 +116,11 @@
   font-size: 30px;
   font-weight: 300;
   font-family: "Roboto", sans-serif;
-  color: rgb(22, 22, 22);
+  color: rgb(255, 255, 255);
+
+  a {
+    color: #73ebeb;
+  }
 
   a:hover {
     color: #ea736d;
