--- a/src/scss/blocks/night.scss
+++ b/src/scss/blocks/night.scss
@@ -81,111 +81,140 @@
 }
 
 .night {
-  background: radial-gradient(
-      ellipse at bottom left,
-      rgba(104, 128, 138, 0.4) 10%,
-      rgba(138, 114, 76, 0) 40%
-    ),
-    linear-gradient(to bottom, rgba(57, 173, 219, 0.25), rgba(42, 60, 87, 0.4)),
-    linear-gradient(135deg, #670d10, #092756);
-}
-
-.night {
-  .navigation {
-    background: transparent;
-    border-top: 10px solid rgb(255, 255, 255);
-    border-bottom: 10px solid rgb(255, 255, 255);
-
-    &:after {
-      content: none;
-    }
-    
-  }
-
-  .navigation-wrap {
-    
-  }
-
-  .header {
-    background: transparent;
-    border-bottom: 10px solid rgb(255, 255, 255);
-  }
-
-  .nav {
-    background-image: -webkit-gradient( linear, left top, right top, color-stop(0, #fff), color-stop(0.4, #fff));
-    background-image: gradient( linear, color-stop(0, #fff), color-stop(0.4, #fff));
-    color:transparent;
-    -webkit-background-clip: text;
-    background-clip: text;
-  }
+  background: #fff;
 
   .night-sun {
     color: white;
   }
 
-  .social-vk {
-    color: #fff;
-    &:hover {
-      color: #039be5;
+}
+
+.night {
+  .page__background {
+    display: none;
+  }
+
+  .navigation {
+    background: transparent;
+
+    &::after,
+    &::before {
+      content: none;
     }
   }
 
-  .social-facebook {
-    color: #fff;
+  .logo {
+    text-shadow: none;
+    font-family: "Open Sans", sans-serif;
+    color: black;
+
     &:hover {
-      color: #7cea6d;
+      text-shadow: none;
+    }
+
+    &::after {
+      border-bottom: 7px solid $yellowcolor;
     }
   }
 
-  .social-email {
-    color: #fff;
+  .nav {
+    text-shadow: none;
+    font-family: "Open Sans", sans-serif;
+    color: black;
+
+    &:after {
+      border-bottom: 7px solid $yellowcolor;
+    }
+
     &:hover {
-      color: #ea736d;
+      color: #73ebeb;
+    }
+
+    &--active {
+      color: #73ebeb;
+      border-bottom: 7px solid $yellowcolor;
     }
   }
 
-  .social-telegram {
-    color: #fff;
-    &:hover {
-      color: #039be5;
+  .navigation__social {
+    @media (min-width: 1170px) {
+      border-bottom: 5px solid $yellowcolor;
     }
   }
 
-  .social-github {
-    color: #fff;
-    &:hover {
-      color: #7cea6d;
-    }
-  }
-
-  .avatar__title {
-    color: #fff;
-    font-weight: 400;
+  .fa-2x {
+    color: black;
+    text-shadow: none;
   }
 }
 
+.night {
+  .button-01 {
+    font-family: "Open Sans", sans-serif;
+    background-color: $yellowcolor;
+    border: 4px solid $yellowcolor;
 
+    &:hover,
+    &:active {
+      background-color: #f8ce42;
+      border: 4px solid #f8ce42;
+    }
+  }
+
+  .button-02 {
+    font-family: "Open Sans", sans-serif;
+    color: rgb(0, 0, 0);
+    border: 4px solid #000;
+  }
+
+  .card {
+    border: 4px solid $yellowcolor;
+  }
+
+  .card__img {
+    border-bottom: 4px solid $yellowcolor;
+  }
+
+  .neon span {
+    animation: none;
+  }
+}
 
 .night {
+  .header {
+    background: transparent;
+
+    &::before,
+    &::after {
+      display: none;
+    }
+  }
+
   .header__text-subtitle p {
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
   }
 
   .header__text-title {
-    color: #fff;
+    font-family: "Open Sans", sans-serif;
+    color: rgb(0, 0, 0);
+
+    &::after {
+      background-color: $yellowcolor;
+    }
   }
 
   .header__bg-title,
   .header__bg-title {
-    color: white;
+    font-family: "Open Sans", sans-serif;
+    color: rgb(0, 0, 0);
   }
 
   .header__bg-skills li {
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
   }
 
   .header__bg-email {
-    color: white;
+    color: rgb(0, 0, 0);
 
     &:hover {
       color: #039be5;
@@ -199,6 +228,7 @@
   .header__bg-img {
     background-image: url("../img/header/03.jpg");
     border: 5px solid $yellowcolor;
+    box-shadow: none;
 
     &::after {
       background: transparent;
@@ -217,6 +247,21 @@
       background: transparent;
     }
   }
+
+  .header__avatar {
+    background-color: $yellowcolor;
+  }
+
+  .header__avatar_css:hover .avatar__title,
+  .header__avatar_js:hover .avatar__title,
+  .header__avatar_html:hover .avatar__title {
+    color: $yellowcolor;
+  }
+
+  .avatar__title {
+    color: rgb(0, 0, 0);
+    font-weight: 400;
+  }
 }
 
 .night .portfolio {
@@ -227,9 +272,16 @@
     height: 0;
   }
 
+  .portfolio__title {
+    &::after {
+      background-color: $yellowcolor;
+    }
+  }
+
   .portfolio__title,
   .portfolio__nav-item {
-    color: #fff;
+    color: rgb(0, 0, 0);
+    font-family: "Open Sans", sans-serif;
     transition: 0.5s ease-in-out;
   }
 
@@ -238,19 +290,65 @@
   }
 }
 
+.night .portfolio__nav {
+  [type="radio"]:checked + label,
+  [type="radio"]:not(:checked) + label {
+    color: rgb(0, 0, 0);
+    font-family: "Open Sans", sans-serif;
+
+    &:hover {
+      color: #73ebeb;
+      border-bottom-color: $yellowcolor;
+    }
+}
+
+.checkbox-all:checked + label,
+.checkbox-html:checked + label,
+.checkbox-less:checked + label,
+.checkbox-scss:checked + label,
+.checkbox-pug:checked + label,
+.checkbox-js:checked + label {
+  color: #73ebeb;
+  border-bottom-color: $yellowcolor;
+}
+}
+
 .night .timeline {
-  border-top: 10px solid rgb(255, 255, 255);
-  border-bottom: 10px solid rgb(255, 255, 255);
   background: transparent;
+
+  &::after {
+    display: none;
+  }
+  &::before {
+    display: none;
+  }
+
+  .timeline__title {
+    &::after {
+      background-color: $yellowcolor;
+    }
+  }
 
   .timeline__title,
   .timeline__column-title,
   .timeline__column-desc {
-    color: #fff;
+    color: rgb(0, 0, 0);
+    font-family: "Open Sans", sans-serif;
   }
 
   .timeline__column-subtitle {
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+  }
+
+  .timeline__column-item {
+    &::before,
+    &::after {
+      background-color: #7e90b9;
+    }
+  }
+
+  .timeline__column-item-img {
+    background-color: #7e90b9;
   }
 }
 
@@ -258,10 +356,18 @@
   background: linear-gradient(#50505080, #50505080),
     url("../img/contact/01.jpg") top left / cover no-repeat;
 
+  .contact-title {
+    font-family: "Open Sans", sans-serif;
+
+    &::after {
+      background-color: $yellowcolor;
+    }
+  }
+
   .contact-title,
   .timeline__column-title,
   .timeline__column-desc {
-    color: #fff;
+    color: rgb(0, 0, 0);
   }
 
   .contact__info-desc {
@@ -271,37 +377,88 @@
   .contact__info::after {
     content: none;
   }
+
+  .rounded .rounded-row:before {
+    background-color: $yellowcolor;
+  }
+
+  .contact__form {
+    box-shadow: 0px 28px 100px 0px #5a5a5a;
+  }
 }
 
 .night .footer {
-  border-top: 10px solid rgb(255, 255, 255);
-  background: transparent;
+  background: #7e90b9;
+
+  &::after {
+    display: none;
+  }
+  &::before {
+    display: none;
+  }
 }
 
 .night .footer-inner {
-  border-top: 10px solid rgb(255, 255, 255);
+  background: #7e90b9;
+  height: 300px;
+  &::after {
+    display: none;
+  }
+  &::before {
+    display: none;
+  }
+
+  .footer-inner-column {
+    height: 300px;
+  }
+  
 
   .footer-inner__title,
   p {
-    color: white;
+    color: rgb(0, 0, 0);
   }
-
 }
 
 .night .card-post {
-  .footer-inner__title,
+
+  &::after {
+    display: none;
+  }
+  &::before {
+    display: none;
+  }
+
   p,
   h2,
   h3,
   h4,
   svg {
-    color: white;
-    fill: white;
+    color: rgb(0, 0, 0);
+    fill: rgb(0, 0, 0);
+    border-bottom-color: $yellowcolor;
+  }
+
+  a {
+    color: $yellowcolor;
   }
 
   input {
-    background-color: #fff;
-    color: black;
+    background-color: rgb(37, 37, 37);
+    color: rgb(255, 255, 255);
+    border: none;
+  }
+
+  .card-post__nav-title,
+  .card-post__nav-desc {
+    font-family: "Open Sans", sans-serif;
+
+    &::after {
+      background-color: $yellowcolor;
+    }
+  }
+
+  .card-post__content-carousel {
+    background-color: $yellowcolor;
   }
 }
 
@@ -310,7 +467,7 @@
 }
 
 .night .link-project-item i {
-  color: #fff;
+  color: $yellowcolor;
 }
 
 .night label {
@@ -333,5 +490,23 @@
   }
   &::before {
     background: #7e90b9;
+  }
+}
+
+.night .full-page {
+  .full-page-wrap {
+    background-color: $yellowcolor;
+  }
+
+  .full-page__title h2 span {
+    color: $yellowcolor;
+  }
+
+  .full-page__desc {
+    border-bottom-color: $yellowcolor;
+  }
+
+  .full-page__img + .full-page__img {
+    border-top-color: $yellowcolor;
   }
 }
