--- a/src/scss/blocks/portfolio.scss
+++ b/src/scss/blocks/portfolio.scss
@@ -1,36 +1,45 @@
 .portfolio {
   position: relative;
   padding: 120px 15px;
-  background: linear-gradient(#dfdbdb85, #fa9d9d91), url('../img/portfolio/bg.jpg') top center/ cover no-repeat;
 
   &::before {
-    position: absolute;
     content: "";
-    top: -1px;
+    position: absolute;
+    top: 0;
     right: 0;
-    height: 90px;
+    height: 150px;
     width: 100%;
     background: linear-gradient(
       0deg,
-      rgba(255, 255, 255, 0) 0%,
-      rgba(255, 255, 255, 0.5) 50%,
-      rgba(255, 255, 255, 1) 100%
+      rgba(255, 255, 255, 0) 30%,
+      rgba(253, 109, 253, 1) 100%
     );
   }
+
   &::after {
-    position: absolute;
     content: "";
-    bottom: -1px;
-    right: 0;
-    height: 90px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 150px;
     width: 100%;
     background: linear-gradient(
       180deg,
-      rgba(255, 255, 255, 0) 0%,
-      rgba(255, 255, 255, 0.5) 50%,
-      rgba(255, 255, 255, 1) 100%
+      rgba(255, 255, 255, 0) 30%,
+      rgba(253, 109, 253, 1) 100%
     );
   }
+}
+
+.portfolio__background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(#dfdbdb48, #fa9d9d70), url('../img/portfolio/bg.jpg') top center/ cover no-repeat;
+  z-index: -1;
+  opacity: 0.6;
 }
 
 .portfolio-wrap {
@@ -42,8 +51,8 @@
   display: inline-block;
   margin-bottom: 70px;
   font-size: 72px;
-  font-family: "Open Sans", sans-serif;
-  color: rgb(0, 0, 0);
+  font-family: 'Neoneon';
+  color: rgb(255, 255, 255);
   font-weight: bold;
   z-index: 5;
 
@@ -51,11 +60,11 @@
     position: absolute;
     content: "";
     clear: both;
-    background-color: rgb(251, 220, 77);
+    background-color: #fd6dfd;
     width: 100%;
     height: 10px;
-    bottom: 5px;
-    left: 0;
+    bottom: -7px;
+    left: -3px;
     z-index: -1;
     transition: 0.5s ease-in-out;
   }
