--- a/src/scss/blocks/timeline.scss
+++ b/src/scss/blocks/timeline.scss
@@ -1,5 +1,34 @@
 .timeline {
+  position: relative;
   padding: 120px 15px 150px;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 150px;
+    width: 100%;
+    background: linear-gradient(
+      0deg,
+      rgba(255, 255, 255, 0) 30%,
+      rgba(253, 109, 253, 1) 100%
+    );
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 150px;
+    width: 100%;
+    background: linear-gradient(
+      180deg,
+      rgba(255, 255, 255, 0) 30%,
+      rgba(253, 109, 253, 1) 100%
+    );
+  }
 }
 
 .timeline-wrap {
@@ -11,8 +40,8 @@
   position: relative;
   display: inline-block;
   font-size: 72px;
-  font-family: "Open Sans", sans-serif;
-  color: rgb(0, 0, 0);
+  font-family: 'Neoneon';
+  color: rgb(255, 255, 255);
   font-weight: bold;
   z-index: 5;
 
@@ -20,11 +49,11 @@
     position: absolute;
     content: "";
     clear: both;
-    background-color: rgb(251, 220, 77);
+    background-color: #fd6dfd;
     width: 100%;
     height: 10px;
-    bottom: 5px;
-    left: 0;
+    bottom: -7px;
+    left: -3px;
     z-index: -1;
     transition: 0.5s ease-in-out;
   }
@@ -59,7 +88,7 @@
     &::before {
       position: absolute;
       content: "";
-      background-color: rgb(225, 238, 244);
+      background-color: #fff;
       width: 4px;
       height: 109px;
       top: 95px;
@@ -71,7 +100,7 @@
     &:first-child:after {
       position: absolute;
       content: "";
-      background-color: rgb(225, 238, 244);
+      background-color: #fff;
       width: 4px;
       height: 57px;
       top: -75px;
@@ -124,7 +153,7 @@
 }
 
 .timeline__column-item-text {
-  background-color: rgb(225, 238, 244);
+  background-color: #fff;
   padding: 10px;
   z-index: 3;
   transition: transform 0.4s linear;
@@ -155,7 +184,7 @@
     transform: translate(-50%, 0) rotate(45deg);
     width: 100px;
     height: 100px;
-    background-color: #e1eef4;
+    background-color: #fff;
     z-index: -1;
   }
 
@@ -167,7 +196,7 @@
     transform: translate(-50%, 0) rotate(45deg);
     width: 100px;
     height: 100px;
-    background-color: rgb(225, 238, 244);
+    background-color: #fff;
     z-index: -1;
   }
 
@@ -224,7 +253,7 @@
   justify-content: center;
   align-items: center;
   border-radius: 28px;
-  background-color: rgb(255, 255, 255);
+  background-color: #ffffff;
   box-shadow: 0px 3px 35px 0px rgba(0, 112, 187, 0.35);
   width: 100px;
   height: 100px;
