--- a/src/scss/blocks/ui.scss
+++ b/src/scss/blocks/ui.scss
@@ -1,14 +1,12 @@
-
-
 .button-01 {
   display: inline-block;
   padding: 20px 40px;
-  background-color: rgb(251, 220, 77);
+  background-color: #fd6dfd80;
   border-radius: 40px;
-  border: 4px solid rgb(251, 220, 77);
+  border: 4px solid #fd6dfd;
   font-size: 34px;
-  font-family: "Open Sans", sans-serif;
-  color: #000;
+  font-family: 'Neoneon';
+  color: #73ebeb;
   font-weight: bold;
   text-decoration: none;
   transition: 0.3s ease-in;
@@ -16,13 +14,13 @@
   outline: none;
 
   &:hover {
-    background-color: #ffd200;
-    border: 4px solid #ffd200;
+    background-color: #fd6dfd;
+    border: 4px solid #fd6dfd;
   }
 
   &:active {
-    background-color: #e1bc10;
-    border: 4px solid #e1bc10;
+    background-color: #fd6dfd;
+    border: 4px solid #fd6dfd;
   }
 
   @media (min-width: 1170px) {
@@ -33,16 +31,16 @@
 .button-02 {
   display: inline-block;
   padding: 20px 40px;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0);
   border-radius: 40px;
-  border: 4px solid black;
+  border: 4px solid #fff;
   font-size: 34px;
-  font-family: "Open Sans", sans-serif;
-  color: rgb(0, 0, 0);
+  font-family: 'Neoneon';
+  color: rgb(255, 255, 255);
   font-weight: bold;
   text-decoration: none;
   transition: 0.3s ease-in;
-  opacity: 0.8;
+  opacity: 1;
   cursor: pointer;
   outline: none;
 
@@ -66,7 +64,7 @@
   text-decoration: none;
   box-shadow: 10px 14px 16px -3px rgba(34, 60, 80, 0.3);
   border-radius: 3%;
-  border: 4px solid rgb(251, 220, 77);
+  border: 4px solid #fd6dfd;
   transition: 0.3s linear;
   background-color: #fff;
 
@@ -75,7 +73,7 @@
 
     .card__title {
       transition: 1s linear;
-      color: #fbdc4d;
+      color: #fd6dfd;
       text-decoration: underline;
       text-shadow: 1px 1px 2px black, 0 0 1em black;
     }
@@ -92,7 +90,7 @@
 
 .card__img {
   margin-bottom: 20px;
-  border-bottom: 4px solid #fbdc4d;
+  border-bottom: 4px solid #fd6dfd;
 
   img {
     width: 100%;
@@ -177,4 +175,165 @@
 
 .display-none {
   display: none;
+}
+
+.neon span {
+  animation: neon linear infinite 3s;
+}
+
+.page__background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+  z-index: -1;
+  overflow: hidden;
+
+  &::before {
+    position: fixed;
+    top: 0px;
+    left: 0%;
+    content: "";
+    height: 100%;
+    width: 150px;
+    background: -webkit-gradient(linear, left bottom, left top, color-stop(30%, rgba(255, 255, 255, 0)), to(#000));
+    background: -o-linear-gradient(bottom, rgba(255, 255, 255, 0) 30%, #000 100%);
+    background: linear-gradient(-90deg, rgba(255, 255, 255, 0) 30%, #000 100%);
+    z-index: 50;
+  }
+
+  &::after {
+    position: fixed;
+    top: 0px;
+    right: 0%;
+    content: "";
+    height: 100%;
+    width: 150px;
+    background: -webkit-gradient(linear, left bottom, left top, color-stop(30%, rgba(255, 255, 255, 0)), to(#000));
+    background: -o-linear-gradient(bottom, rgba(255, 255, 255, 0) 30%, #000 100%);
+    background: linear-gradient(90deg, rgba(255, 255, 255, 0) 30%, #000 100%);
+    z-index: 50;
+  }
+}
+
+.page__background-wrap-bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+  animation: bg 30s linear 0s infinite alternate;
+  background: linear-gradient(
+      160deg,
+      rgba(203, 251, 255, 0.5) 40%,
+      #fd6dfc80 80%
+    ),
+    url("../img/body/00.jpg") top left / cover no-repeat;
+  background-blend-mode: hue;
+  overflow: hidden;
+  z-index: 20;
+}
+
+.page__background-wrap {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 30;
+}
+
+.page__background .page__background-wrap img {
+  position: fixed;
+  display: none;
+  @media (min-width: 1170px) {
+      display: block;
+  }
+}
+
+.page__background-wrap img:nth-child(1) {
+  top: 20%;
+  left: 5%;
+}
+.page__background-wrap img:nth-child(2) {
+  top: 35%;
+  left: 20%;
+}
+.page__background-wrap img:nth-child(3) {
+  top: 70%;
+  left: 80%;
+}
+.page__background-wrap img:nth-child(4) {
+  top: 30%;
+  left: 75%;
+}
+.page__background-wrap img:nth-child(5) {
+  top: 50%;
+  left: 90%;
+}
+
+.page__link {
+  position: fixed;
+  bottom: 150px;
+  left: 60px;
+  z-index: 50;
+  transform: rotate(-90deg);
+  z-index: 15;
+  animation: rocket 10s linear 1s infinite alternate;
+  opacity: 0;
+  transition: opacity 0.5s linear;
+
+  @media (min-width: 1400px) {
+    bottom: 80px;
+    left: 40px;
+  }
+
+  a {
+    display: inline-block;
+    font-size: 24px;
+    font-weight: 700;
+    font-family: "Neoneon";
+    color: #fff;
+    text-decoration: none;
+    padding: 15px;
+    background-color: #73ebeb;
+    transition: color 0.4s linear;
+    z-index: 15;
+  }
+
+  a:hover {
+    color: #fd6dfd;
+  }
+
+  &::before {
+    position: absolute;
+    bottom: -9px;
+    right: -145%;
+    content: "";
+    border-left: 36px solid white;
+    border-top: 36px solid transparent;
+    border-bottom: 36px solid transparent;
+    border-right: 36px solid transparent;
+    transform: translateX(-100%);
+    z-index: 10;
+  }
+
+  &::after {
+    position: absolute;
+    bottom: 0;
+    left: -50%;
+    content: "";
+    height: 0;
+    width: 40px;
+    border-bottom: 40px solid #fd6dfd;
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
+    transform: rotate(90deg) translate(-7px, -3px);
+    z-index: -1;
+  }
 }
