--- a/src/scss/mixin/detals.scss
+++ b/src/scss/mixin/detals.scss
@@ -3,10 +3,10 @@
   margin-bottom: 30px;
   font-size: 44px;
   font-family: 'Open Sans', sans-serif;
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
   font-weight: bold;
   line-height: 1.2;
-  border-bottom: 8px solid rgb(251, 220, 77);
+  border-bottom: 8px solid #fd6dfd;
 
   @media (min-width: 1170px) {
     font-size: 26px;
@@ -32,7 +32,7 @@
   margin: 0;
   font-size: 28px;
   font-family: 'Open Sans', sans-serif;
-  color: rgb(22, 22, 22);
+  color: rgb(255, 255, 255);
   line-height: 1.5;
   text-align: left;
 
@@ -53,7 +53,7 @@
   display: inline-block;
   font-size: 28px;
   font-family: 'Open Sans', sans-serif;
-  color: rgb(3, 155, 229);
+  color: #fd6dfd;
   text-decoration: underline;
   line-height: 1.5;
   text-align: left;
