--- a/src/scss/mixin/link-project.scss
+++ b/src/scss/mixin/link-project.scss
@@ -7,10 +7,10 @@
   margin-bottom: 30px;
   font-size: 44px;
   font-family: 'Open Sans', sans-serif;
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
   font-weight: bold;
   line-height: 1.2;
-  border-bottom: 8px solid #fbdc4d;
+  border-bottom: 8px solid #fd6dfd;
 
   @media (min-width: 1170px) {
     font-size: 26px;
@@ -28,6 +28,7 @@
   }
 
   i {
+    color: #fd6dfd;
     margin-right: 15px;
   }
 
@@ -45,7 +46,7 @@
 .link-project-item a {
   font-size: 28px;
   font-family: 'Open Sans', sans-serif;
-  color: rgb(3, 155, 229);
+  color: #fd6dfd;
   text-decoration: underline;
   line-height: 1.2;
   transition: .3s ease-in-out;
