--- a/src/scss/utils/_utils.scss
+++ b/src/scss/utils/_utils.scss
@@ -1,31 +1,7 @@
-/* Floats */
-.float-right { float: right; }
-.float-left { float: left; }
-.clearfix::after, .clearfix::before {content: ''; display: table; clear: both;}
-
-/* Text align */
-.text-center { text-align: center; }
-.text-left { text-align: left; }
-.text-right { text-align: right; }
-.text-justify { text-align: justify; }
-
-/* Font weight */
-.light { font-weight: 300; }
-.normal { font-weight: 400; }
-.strong { font-weight: 700; }
-
-$i: 0;
-@while $i <= 100 {
-
-    .mt-#{$i} {	margin-top: #{$i}px; }
-    .mb-#{$i} {	margin-bottom: #{$i}px; }
-    .ml-#{$i} {	margin-left: #{$i}px; }
-    .mr-#{$i} {	margin-right: #{$i}px; }
-
-    .pt-#{$i} {	padding-top: #{$i}px; }
-    .pb-#{$i} {	padding-bottom: #{$i}px; }
-    .pl-#{$i} {	padding-left: #{$i}px; }
-    .pr-#{$i} {	padding-right: #{$i}px; }
-
-    $i: $i + 5;
+@font-face {
+	font-family: 'Neoneon';
+	src: url('../libs/fonts/Neoneon.eot');
+	src: local('☺'), url('../libs/fonts/Neoneon.woff') format('woff'), url('../libs/fonts/Neoneon.ttf') format('truetype'), url('../libs/fonts/Neoneon.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
 }
